render to imgui target (note, if window is collapsed or fully shrunk then will cause errors)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES
     src/bitmap_fb.cpp
     src/gl_helpers.cpp
     src/imgui_gl.cpp
+    src/resizable_target.cpp
     src/sdl_gl.cpp
     src/shader.cpp
     src/shader_linker.cpp
