Add option to abstract main entrypoint into BFGengine, could make things a lot cleaner (a bit messy atm, but works!)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,11 @@ project(bmp_fb)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set (CMAKE_CXX_STANDARD 20)
 
+set(BFGeEntry FALSE)
 if ("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}")
     set(build_default_ex TRUE)
     if (${BUILD_EX_BASIC})
+        set(BFGeEntry TRUE)
         add_subdirectory(examples/basic)
         set(build_default_ex FALSE)
     endif()
