--- a/examples/basic/CMakeLists.txt
+++ b/examples/basic/CMakeLists.txt
@@ -1,10 +1,9 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/basic/bin)
 
 set(basic_sources
-    main.cpp
+    app.cpp
 )
 add_executable(basic ${basic_sources})
 target_include_directories(basic PRIVATE .)
 
 target_link_libraries(basic PRIVATE ${PROJECT_NAME})
-target_link_libraries(basic PRIVATE SDL2::SDL2main)
