Create second target that uses the engine-defined entrypoint structure, no longer need messy variables floating around on the top level

--- a/examples/basic/CMakeLists.txt
+++ b/examples/basic/CMakeLists.txt
@@ -6,4 +6,4 @@ set(basic_sources
 add_executable(basic ${basic_sources})
 target_include_directories(basic PRIVATE .)
 
-target_link_libraries(basic PRIVATE ${PROJECT_NAME})
+target_link_libraries(basic PRIVATE ${PROJECT_NAME}::Entrypoint)
