--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,14 +6,6 @@ set(SOURCES
     shader_compiler.cpp
     shader_linker.cpp
 )
-if(BFGeEntry)
-    message(STATUS "Defining Sources: adding 'entrypoint.cpp'")
-    list(APPEND SOURCES entrypoint.cpp)
-else()
-    message(STATUS "Defining Sources: not adding 'entrypoint.cpp'")
-endif()
-message(STATUS "Using Sources: ${SOURCES}")
-
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC .)
 
@@ -21,6 +13,13 @@ target_link_libraries(${PROJECT_NAME} PUBLIC glad)
 target_link_libraries(${PROJECT_NAME} PUBLIC imgui)
 target_link_libraries(${PROJECT_NAME} PUBLIC SDL2::SDL2-static)
 
-if (BFGeEntry)
-    target_link_libraries(${PROJECT_NAME} PRIVATE SDL2::SDL2main)
-endif()
+# Target with engine defined entrypoint
+set(PROJECT_NAME_ENTRY ${PROJECT_NAME}-entrypoint)
+add_library(${PROJECT_NAME_ENTRY} STATIC ${SOURCES} entrypoint.cpp)
+add_library(${PROJECT_NAME}::Entrypoint ALIAS ${PROJECT_NAME_ENTRY})
+target_include_directories(${PROJECT_NAME_ENTRY} PUBLIC .)
+
+target_link_libraries(${PROJECT_NAME_ENTRY} PUBLIC glad)
+target_link_libraries(${PROJECT_NAME_ENTRY} PUBLIC imgui)
+target_link_libraries(${PROJECT_NAME_ENTRY} PUBLIC SDL2::SDL2-static)
+target_link_libraries(${PROJECT_NAME_ENTRY} PRIVATE SDL2::SDL2main)
