--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,10 @@ set (CMAKE_CXX_STANDARD 20)
 
 if ("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}")
     set(build_default_ex TRUE)
+    if (${BUILD_EX_AUDIO})
+        add_subdirectory(examples/audio)
+        set(build_default_ex FALSE)
+    endif()
     if (${BUILD_EX_BASIC})
         add_subdirectory(examples/basic)
         set(build_default_ex FALSE)
