--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(SOURCES
-    application.cpp
+    BFGe/BFGe.cpp
+    BFGe/application.cpp
+
     audio.cpp
     bitmap_fb.cpp
     imgui_gl.cpp
@@ -16,7 +18,7 @@ target_link_libraries(${PROJECT_NAME} PUBLIC SDL2::SDL2-static)
 
 # Target with engine defined entrypoint
 set(PROJECT_NAME_ENTRY ${PROJECT_NAME}-entrypoint)
-add_library(${PROJECT_NAME_ENTRY} STATIC ${SOURCES} entrypoint.cpp)
+add_library(${PROJECT_NAME_ENTRY} STATIC ${SOURCES} BFGe/entrypoint.cpp)
 add_library(${PROJECT_NAME}::Entrypoint ALIAS ${PROJECT_NAME_ENTRY})
 target_include_directories(${PROJECT_NAME_ENTRY} PUBLIC .)
 
