--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCES
     BFGe/audio.cpp
     BFGe/bitmap_fb.cpp
     BFGe/imgui_gl.cpp
+    BFGe/logger.cpp
     BFGe/sdl_gl.cpp
     BFGe/shader_compiler.cpp
     BFGe/shader_linker.cpp
@@ -13,6 +14,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC .)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC glad)
 target_link_libraries(${PROJECT_NAME} PUBLIC imgui)
+target_link_libraries(${PROJECT_NAME} PUBLIC spdlog)
 target_link_libraries(${PROJECT_NAME} PUBLIC SDL2::SDL2-static)
 
 # Target with engine defined entrypoint
@@ -23,5 +25,6 @@ target_include_directories(${PROJECT_NAME_ENTRY} PUBLIC .)
 
 target_link_libraries(${PROJECT_NAME_ENTRY} PUBLIC glad)
 target_link_libraries(${PROJECT_NAME_ENTRY} PUBLIC imgui)
+target_link_libraries(${PROJECT_NAME_ENTRY} PUBLIC spdlog)
 target_link_libraries(${PROJECT_NAME_ENTRY} PUBLIC SDL2::SDL2-static)
 target_link_libraries(${PROJECT_NAME_ENTRY} PRIVATE SDL2::SDL2main)
