Made Log class to enable custom named loggers.
It turns out that they were constructors, I guess it's because the class has no constructor of their own, so it needs to be called externally

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ set(SOURCES
     BFGe/audio.cpp
     BFGe/bitmap_fb.cpp
     BFGe/imgui_gl.cpp
-    BFGe/logger.cpp
+    BFGe/logging.cpp
     BFGe/sdl_gl.cpp
     BFGe/shader_compiler.cpp
     BFGe/shader_linker.cpp
